// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqlmodules provide autocrud works like the documentation in process 1`] = `
Array [
  Array [
    Object {
      "name": "Sample",
      "order_id": 1,
      "order_items": Array [
        Object {
          "item_id": 1,
          "items": Array [
            Object {
              "description": "Paper",
              "item_id": 1,
            },
          ],
          "order_id": 1,
          "order_item_id": 1,
          "quantity": 1,
        },
        Object {
          "item_id": 2,
          "items": Array [
            Object {
              "description": "Can",
              "item_id": 2,
            },
          ],
          "order_id": 1,
          "order_item_id": 2,
          "quantity": 1,
        },
        Object {
          "item_id": 3,
          "items": Array [
            Object {
              "description": "Loaf",
              "item_id": 3,
            },
          ],
          "order_id": 1,
          "order_item_id": 3,
          "quantity": 1,
        },
      ],
    },
  ],
]
`;

exports[`sqlmodules provide autocrud works like the documentation in process 2`] = `
Array [
  Array [
    Object {
      "name": "Sample",
      "order_id": 1,
    },
  ],
]
`;

exports[`sqlmodules provide autocrud works like the documentation in process 3`] = `
Array [
  Array [
    Object {
      "description": "Paper",
      "item_id": 1,
    },
    Object {
      "description": "Can",
      "item_id": 2,
    },
    Object {
      "description": "Loaf",
      "item_id": 3,
    },
  ],
]
`;

exports[`sqlmodules provide autocrud works like the documentation in process 4`] = `
Array [
  Array [],
]
`;

exports[`sqlmodules provide autocrud works like the documentation over http 1`] = `
Array [
  Object {
    "name": "Sample",
    "order_id": 2,
    "order_items": Array [
      Object {
        "item_id": 4,
        "items": Array [
          Object {
            "description": "Paper",
            "item_id": 4,
          },
        ],
        "order_id": 2,
        "order_item_id": 4,
        "quantity": 1,
      },
      Object {
        "item_id": 5,
        "items": Array [
          Object {
            "description": "Can",
            "item_id": 5,
          },
        ],
        "order_id": 2,
        "order_item_id": 5,
        "quantity": 1,
      },
      Object {
        "item_id": 6,
        "items": Array [
          Object {
            "description": "Loaf",
            "item_id": 6,
          },
        ],
        "order_id": 2,
        "order_item_id": 6,
        "quantity": 1,
      },
    ],
  },
]
`;

exports[`sqlmodules provide autocrud works like the documentation over http 2`] = `
Array [
  Object {
    "name": "Sample",
    "order_id": 2,
  },
]
`;

exports[`sqlmodules provide autocrud works like the documentation over http 3`] = `
Array [
  Array [
    Object {
      "description": "Paper",
      "item_id": 4,
    },
    Object {
      "description": "Can",
      "item_id": 5,
    },
    Object {
      "description": "Loaf",
      "item_id": 6,
    },
  ],
]
`;

exports[`sqlmodules provide autocrud works like the documentation over http 4`] = `
Array [
  Array [],
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 1`] = `
Array [
  Object {
    "id": 100,
  },
  Object {
    "id": 200,
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 2`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
  Object {
    "id": 200,
    "name": "hola",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 3`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
  Object {
    "id": 200,
    "name": "hola",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 4`] = `
Array [
  Object {
    "id": 100,
    "name": "super",
  },
  Object {
    "id": 200,
    "name": "super",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 5`] = `
Array [
  Object {
    "id": 100,
    "name": "super",
  },
  Object {
    "id": 200,
    "name": "super",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 6`] = `
Array [
  Object {
    "id": 100,
  },
  Object {
    "id": 200,
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 7`] = `Array []`;

exports[`sqlmodules provide autocrud works with arrays of parameters in process 8`] = `
Array [
  Object {
    "id": 300,
  },
  Object {
    "id": 400,
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 1`] = `
Array [
  Object {
    "id": 100,
  },
  Object {
    "id": 200,
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 2`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
  Object {
    "id": 200,
    "name": "hola",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 3`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
  Object {
    "id": 200,
    "name": "hola",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 4`] = `
Array [
  Object {
    "id": 100,
    "name": "super",
  },
  Object {
    "id": 200,
    "name": "super",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 5`] = `
Array [
  Object {
    "id": 100,
    "name": "super",
  },
  Object {
    "id": 200,
    "name": "super",
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 6`] = `
Array [
  Object {
    "id": 100,
  },
  Object {
    "id": 200,
  },
]
`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 7`] = `Array []`;

exports[`sqlmodules provide autocrud works with arrays of parameters over http 8`] = `
Array [
  Object {
    "id": 300,
  },
  Object {
    "id": 400,
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set in process 1`] = `
Array [
  Object {
    "id": 100,
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set in process 2`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set in process 3`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set in process 4`] = `
Array [
  Object {
    "id": undefined,
    "name": "super",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set in process 5`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set in process 6`] = `
Array [
  Object {
    "id": 100,
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set in process 7`] = `Array []`;

exports[`sqlmodules provide autocrud works with single parameter set over http 1`] = `
Array [
  Object {
    "id": 100,
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set over http 2`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set over http 3`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set over http 4`] = `
Array [
  Object {
    "name": "super",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set over http 5`] = `
Array [
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set over http 6`] = `
Array [
  Object {
    "id": 100,
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set over http 7`] = `Array []`;
